samples/N16k.inp
1 100000.0 1.0E+06 40 40 640
16000 1 10 196409 100 1 10
0.02 0.02 0.1 1.0 1.0 10.0 1.0 0.7
0 1 1 0 1 0 4 0 0 2
0 1 0 2 2 0 0 0 3 6
1 0 2 0 0 2 0 0 0 2
1 0 2 1 1 0 1 1 2 0
0 0 0 0 0 2 3 0 1 0
1.0E-05 1.0E-06 0.1 1.0 1.0E-06 0.01 1.0
2.35 20.0 0.08 0 0 0.001 0 1.0
0.5 0.0 0.0 0.0

KSTART, TCOMP, TCRITp, isernb,iserreg,iserks                  (nbody6.F)
N, NFIX, NCRIT, NRAND, NNBOPT, NRUN                           (input.F)
ETAI, ETAR, RS0, DTADJ, DELTAT, TCRIT, QE, RBAR, ZMBAR        (input.F)
(KZ(J),J=1,40)                                                (input.F)
(BK(J),J=1,10)                                                (input.F)
DTMIN, RMIN, ETAU, ECLOSE, GMIN, GMAX, SMAX                   (input.F)
ALPHA, BODY1, BODYN, NBIN0, ZMET, EPOCH0, DTPLOT              (data.F)
Q, VXROT, VZROT, RSPH2                                        (scale.F)
NBIN, SEMI0, ECC0, RATIO,RANGE, NSKIP, IDORM                  (binpop.f)
GMG, RG0                                                      (xtrnl0.F) KZ(14)=2
GMG, DISK, A, B, VCIRC, RCIRC, GMB, AR, GAM,RG(1-3),VG(1-3)   (xtrnl0.F) KZ(14)=3
NBIN, SEMI0, ECC0, RATIO,RANGE, NSKIP, IDORM                  (binpop.f) KZ(8)=1,KZ(8)=3
